--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -1,12 +1,12 @@
 ---
 import { Picture } from 'astro:assets';
-import ProfilePicture from '../assets/profile.png';
+import ProfilePicture from '../assets/developer.jpg';
 
 const profile = {
-    name: 'Dejan Vi.',
+    name: 'Ionut Gabriel Marisescu',
     title: 'Full Stack Developer',
-    location: 'Munich, Germany',
-    description: 'Passionate web developer focused on creating clean, efficient, and scalable web applications with a modern tech stack. Specialized in Angular, TypeScript, and Supabase, delivering responsive and intuitive user interfaces. Even my name includes "dev".'
+    location: 'Turin, Italy',
+  description: 'Hire me,thank you'
 };
 ---
 
