feat: modified the texts to reflect better the profile

--- a/src/components/ContentAbout.astro
+++ b/src/components/ContentAbout.astro
@@ -38,12 +38,15 @@ const techStack: TechStack = {
         'React Query',
         'Redux',
         'Material-UI',
+        'SolidJs',
     ],
     backend: [
-        'Node.js',
+        'Nodejs',
         'Nestjs',
+        'ExpressJs',
         'MongoDB',
         'PostgreSQL',
+        'Kysely',
         'TypeORM',
         'Prisma',
     ]
@@ -59,7 +62,7 @@ const me: Developer = {
     ],
     interests: [
         'Neovim',
-        'Mechanical Spit Keyboards',
+        'Mechanical Choc Spit Keyboards',
         'Open Source',
         'Networking',
     ]
@@ -73,7 +76,7 @@ const contact = (type: ContactType): string => {
         case 'linkedIn':
             return 'https://www.linkedin.com/in/gabriel-marisescu';
         case 'email':
-            return 'gabriel.lavoro10@gmail.com';
+            return 'ionutgabrielmarisescu@gmail.com';
         default:
             return 'Send fax.';
     }
