--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,25 +2,24 @@
 import '../styles/global.scss';
 
 // Base domain URL without trailing slash
-const domainBaseURL = 'https://devidev.io';
-const ogImageUrl    = 'https://devidev.io/img/meta.png';
+const domainBaseURL = 'https://gabrielmarisescu.github.io';
 
+//ionutgabrielmarisescu@gmail.com
 // Website publisher & region
-const authorPublisher   = 'Dejan Vi.';
-const geoRegion         = 'DE-BY';
+const authorPublisher   = 'Ionut Gabriel Marisescu';
+const geoRegion         = 'IT';
 
 // SEO title, description and keywords
-const seoTitle          = 'Ionut Gabriel Marisescu | Full Stack Developer';
-const seoDescription    = 'Passionate web developer focused on creating clean, efficient, and scalable web applications with a modern tech stack. Specialized in Angular, TypeScript, and Supabase.';
-const seoKeywords       = 'Full Stack Developer, Dejan Vi, Munich, Papersend, Qivi, TECHPOINT, Angular, Typescript, Supabase';
+const seoTitle          = 'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Nodejs NextJs ExpressJs';
+const seoDescription    = 'Passionate web developer focused on creating clean, efficient, and scalable web applications with a modern tech stack. Specialized in ReactJs, TypeScript, NestJs and ExpressJs.';
+const seoKeywords       = 'Full Stack Developer, Ionut Gabriel Marisescu, Torino, Italy, ReactJs, Nodejs, NestJs, Typescript, Angular, SolidJs, Redux, Prisma';
 
 // Twitter card data
 const twitter = {
     title:          seoTitle,
     description:    seoDescription,
-    image:          ogImageUrl,
-    site:           '@devidev_io',
-    creator:        '@devidev_io'
+    site:           '@IWantToBeADev96',
+    creator:        '@IWantToBeADev96',
 };
 
 // Open graph data
@@ -28,15 +27,14 @@ const openGraph = {
     title:          seoTitle,
     description:    seoDescription,
     url:            domainBaseURL,
-    image:          ogImageUrl,
     type:           'website',
     locale:         'en_US',
-    siteName:       'devi|dev|io'
+    siteName:       'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Nodejs NextJs ExpressJs'
 };
 
 // Dublin core
 const dublinCore = {
-    title:          'devi|dev|io',
+    title:          'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Nodejs NextJs ExpressJs',
     creator:        authorPublisher,
     publisher:      authorPublisher,
     rights:         authorPublisher,
@@ -95,7 +93,7 @@ const dublinCore = {
         <meta property="og:description"         content={openGraph.description}>
         <meta property="og:url"                 content={openGraph.url}>
         <meta property="og:type"                content={openGraph.type}>
-        <meta property="og:image"               content={openGraph.image}>
+        <!-- <meta property="og:image"               content={openGraph.image}> -->
         <meta property="og:locale"              content={openGraph.locale}>
         <meta property="og:site_name"           content={openGraph.siteName}>
         <!-- End: Facebook open graph -->
@@ -104,7 +102,7 @@ const dublinCore = {
         <meta name="twitter:card"               content="summary_large_image">
         <meta name="twitter:title"              content={twitter.title}>
         <meta name="twitter:description"        content={twitter.description}>
-        <meta name="twitter:image"              content={twitter.image}>
+        <!-- <meta name="twitter:image"              content={twitter.image}> -->
         <meta name="twitter:site"               content={twitter.site}>
         <meta name="twitter:creator"            content={twitter.creator}>
         <!-- End: Twitter card -->
