fix: fixed typos and added skills

--- a/src/components/ContentAbout.astro
+++ b/src/components/ContentAbout.astro
@@ -44,9 +44,13 @@ const techStack: TechStack = {
         'Nodejs',
         'Nestjs',
         'ExpressJs',
+        'Fastify',
         'MongoDB',
         'PostgreSQL',
+        'MySQL',
+        'Sqlite',
         'Kysely',
+        'Knex',
         'TypeORM',
         'Prisma',
     ]
@@ -62,7 +66,7 @@ const me: Developer = {
     ],
     interests: [
         'Neovim',
-        'Mechanical Choc Spit Keyboards',
+        'Mechanical Choc Split Keyboards',
         'Open Source',
         'Networking',
     ]
