--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -6,7 +6,7 @@ const profile = {
     name: 'Ionut Gabriel Marisescu',
     title: 'Full Stack Developer',
     location: 'Turin, Italy',
-  description: 'Full Stack TypeScript Developer with a strong focus on building scalable and maintainable web applications using ReactJS, NodeJS, and NestJS. Experienced in modern frontend and backend technologies, with a passion for developer ergonomics — daily driver of Neovim and split mechanical keyboards for a fast, efficient workflow.'
+    description: 'Full Stack  Developer with a strong focus on building scalable web applications using ReactJS, Angular and Golang. Experienced in modern frontend and backend technologies, with a passion for developer ergonomics — daily driver of Neovim and split mechanical keyboards for a fast, efficient workflow.'
 };
 ---
 
