--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -8,24 +8,25 @@ interface Social {
 }
 
 const socials: Social[] = [
-{
-    icon: 'twitter',
-    link: 'https://x.com/IWantToBeADev96',
-    title: 'View Twitter Profile'
-  },
-  {
-    icon: 'github',
-    link: 'https://github.com/gabrielMarisescu',
-    title: 'View GitHub Profile'
-},  {
-    icon: 'linkedIn',
-    link: 'https://www.linkedin.com/in/gabriel-marisescu',
-    title: 'View LinkedIn Profile'
-},  {
-    icon: 'email',
-    link: 'mailto:gabriel.lavoro10@gmail.com',
-    title: 'Send Email'
-}];
+]
+// {
+//     icon: 'twitter',
+//     link: 'https://x.com/IWantToBeADev96',
+//     title: 'View Twitter Profile'
+//   },
+//   {
+//     icon: 'github',
+//     link: 'https://github.com/gabrielMarisescu',
+//     title: 'View GitHub Profile'
+// },  {
+//     icon: 'linkedIn',
+//     link: 'https://www.linkedin.com/in/gabriel-marisescu',
+//     title: 'View LinkedIn Profile'
+// },  {
+//     icon: 'email',
+//     link: 'mailto:gabriel.lavoro10@gmail.com',
+//     title: 'Send Email'
+// }];
 
 ---
 
