--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,9 +10,9 @@ const authorPublisher   = 'Ionut Gabriel Marisescu';
 const geoRegion         = 'IT';
 
 // SEO title, description and keywords
-const seoTitle          = 'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Nodejs NextJs ExpressJs';
-const seoDescription    = 'Passionate web developer focused on creating clean, efficient, and scalable web applications with a modern tech stack. Specialized in ReactJs, TypeScript, NestJs and ExpressJs.';
-const seoKeywords       = 'Full Stack Developer, Ionut Gabriel Marisescu, Torino, Italy, ReactJs, Nodejs, NestJs, Typescript, Angular, SolidJs, Redux, Prisma';
+const seoTitle          = 'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Golang NextJs ';
+const seoDescription    = 'Passionate web developer focused on creating clean, efficient, and scalable web applications with a modern tech stack. Specialized in ReactJs, TypeScript, Golang';
+const seoKeywords       = 'Full Stack Developer, Ionut Gabriel Marisescu, Torino, Italy, ReactJs, Golang, Typescript, Angular, SolidJs, Redux,MongoDB';
 
 // Twitter card data
 const twitter = {
@@ -29,12 +29,12 @@ const openGraph = {
     url:            domainBaseURL,
     type:           'website',
     locale:         'en_US',
-    siteName:       'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Nodejs NextJs ExpressJs'
+    siteName:       'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Golang Angular'
 };
 
 // Dublin core
 const dublinCore = {
-    title:          'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Nodejs NextJs ExpressJs',
+    title:          'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs NextJs Golang',
     creator:        authorPublisher,
     publisher:      authorPublisher,
     rights:         authorPublisher,
