--- a/src/components/ContentProjects.astro
+++ b/src/components/ContentProjects.astro
@@ -1,77 +1,32 @@
 ---
-interface Project {
-    name: string;
-    description: string;
+import { Image } from 'astro:assets';
+import img1 from '../assets/img1.jpg';
+import img2 from '../assets/img2.jpg';
+import img3 from '../assets/img3.jpg';
+import img4 from '../assets/img4.jpg';
+import img5 from '../assets/img5.jpg';
+
+interface Image {
+    // name: string;
+    // description: string;
     link: {
         url?: string;
-        target?: string;
+        // target?: string;
         title?: string;
-        buttonLabel?: string;
+        // buttonLabel?: string;
     };
 };
 
-const projects: Project[] = [{
-    name: 'Papersend.io',
-    description: 'Papersend is the free alternative to DocSend for secure document sharing, tracking, and Data Rooms. Customize branding, control access, and protect your documents.',
-    link: {
-        url: 'https://papersend.io/',
-    }
-}, {
-    name: 'Qivi.io',
-    description: 'Qivi is an all-in-one application designed to streamline business operations, enhance productivity, and maximize success. Data security is a priority.',
-    link: {
-        url: 'https://qivi.io/'
-    }
-}, {
-    name: 'TECHPOINT.de',
-    description: 'TECHPOINT is a local IT service provider based in the Starnberg district and the Fünfseenland region, specializing in delivering reliable and modern IT solutions.',
-    link: {
-        url: 'https://techpoint.de/'
-    }
-}];
+
 ---
 
 <div>
-
-    <!-- <h2 class="text-2xl font-bold text-white mb-4">Latest Projects</h2> -->
-
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-
-        {projects.map(project =>
-
-            <div class="flex flex-col justify-center items-start border border-gray-700 rounded-lg p-4 bg-black">
-
-                <h3 class="text-xl font-semibold text-white mb-2">
-                    {project.name}
-                </h3>
-
-                <p class="text-gray-400">
-                    {project.description}
-                </p>
-
-                {
-                    project.link?.url ?
-                        <a
-                            href={project.link.url}
-                            title={project.link.title || project.name}
-                            target={project.link.target || '_blank'}
-                            class="
-                                w-full px-4 py-2.5 mt-4 text-center
-
-                                border border-gray-600 rounded-lg
-
-                                hover:text-primary
-                                hover:border-primary
-                            ">
-                            {project.link.buttonLabel || 'Open Project Website'}
-                        </a>
-                    : null
-                }
-
-            </div>
-
-        )}
-
+        <Image src={img1} alt={'hiking photo'} />
+        <Image src={img2} alt={'Split keyboard Photo'} />
+        <Image src={img3} alt={'hiking photo'} />
+        <Image src={img4} alt={'hiking photo'} />
+        <Image src={img5} alt={'hiking photo'} />
     </div>
 
 </div>
