--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ import ContentProjects from '../components/ContentProjects.astro';
 
                         <ContentLink
                             contentId="tab2"
-                            contentName="projects.md"
+                            contentName="images"
                         />
 
                     </div>
