feat: implementedn nodejs changes

--- a/src/components/ContentAbout.astro
+++ b/src/components/ContentAbout.astro
@@ -39,6 +39,10 @@ const techStack: TechStack = {
     ],
     backend: [
         'Golang',
+        'NodeJs',
+        'ExpressJs',
+        'NestJs',
+        'Prisma',
         'MongoDB',
     ]
 };
