--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,9 +10,9 @@ const authorPublisher   = 'Ionut Gabriel Marisescu';
 const geoRegion         = 'IT';
 
 // SEO title, description and keywords
-const seoTitle          = 'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Golang NextJs ';
-const seoDescription    = 'Passionate web developer focused on creating clean, efficient, and scalable web applications with a modern tech stack. Specialized in ReactJs, TypeScript, Golang';
-const seoKeywords       = 'Full Stack Developer, Ionut Gabriel Marisescu, Torino, Italy, ReactJs, Golang, Typescript, Angular, SolidJs, Redux,MongoDB';
+const seoTitle          = 'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Golang NextJs NodeJs NestJs ExpressJs ';
+const seoDescription    = 'Passionate web developer focused on creating clean, efficient, and scalable web applications with a modern tech stack. Specialized in ReactJs, TypeScript, Golang, NestJs, NodeJs, ExpressJs';
+const seoKeywords       = 'Full Stack Developer, Ionut Gabriel Marisescu, Torino, Italy, ReactJs, Golang, Typescript, Angular, SolidJs, Redux,MongoDB NodeJs NestJs ExpressJs';
 
 // Twitter card data
 const twitter = {
@@ -29,12 +29,12 @@ const openGraph = {
     url:            domainBaseURL,
     type:           'website',
     locale:         'en_US',
-    siteName:       'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Golang Angular'
+    siteName:       'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs Golang Angular NodeJs ExpressJs NodeJs'
 };
 
 // Dublin core
 const dublinCore = {
-    title:          'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs NextJs Golang',
+    title:          'Ionut Gabriel Marisescu | Full Stack Developer | ReactJs NextJs Golang NodeJs ExpressJs NestJs',
     creator:        authorPublisher,
     publisher:      authorPublisher,
     rights:         authorPublisher,
